# sheafy

./: Cargo.toml  README.md  project_bundle.md  sheafy.toml
src/: bundle.rs  cli.rs  config.rs  main.rs  restore.rs
tests/: integration_tests.rs
