[package]
name = "sheafy"
version = "0.1.1" # Incremented version
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
pathdiff = "0.2"
lazy_static = "1.4"
ignore = "0.4" # Add the ignore crate

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
