[package]
name = "sheafy"
version = "0.1.1"
edition = "2021"
description = "A command-line tool to bundle project files into a Markdown document and restore them."
license = "MIT"
authors = ["Pluveto <zijing.zhang@proton.me>"]
repository = "https://github.com/pluveto/sheafy"
keywords = ["bundle", "markdown", "gitignore", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
pathdiff = "0.2"
lazy_static = "1.4"
ignore = "0.4" # Add the ignore crate

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
