[package]
name = "sheafy"
version = "0.1.2"
edition = "2021"
description = "A command-line tool to bundle project files into a Markdown document and restore them."
license = "MIT"
authors = ["Pluveto <zijing.zhang@proton.me>"]
repository = "https://github.com/pluveto/sheafy"
keywords = ["bundle", "markdown", "gitignore", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
lazy_static = "1.4"
pathdiff = "0.2"
regex = "1.10"
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
